ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
/* ... */
.smb-event {
  .contact-number{
  .alert-icon {
    svg {
      position: absolute!important;
      top: 1rem!important;
      right: 1.8rem!important;
    }
  }
  input[type="tel"]:not(.browser-default) {
    width: 20.5rem;
    @include respond-to-min($tablet) {
      width: 20.5rem;
    }
    @include respond-to-min($desktop) {
      width: 30.8rem !important;
      }
  }
}
}
.new_form {
  .hideBusiness {
    visibility: hidden;
  }
  .showBusiness {
    visibility: visible;
  }
  padding: 0 1.45rem !important; //Form default container responsive grid padding overrides;
  .cmp-teaser__content {
    padding: 0 1.45rem !important;
    text-align: center;
    h2 {
      font-size: $font40;
      line-height: calculateRem(52px);
      @media (max-width: $screen-md-max) {
        font-size: $font28;
        line-height: 34px;
      }
    }
  }

  .cmp-teaser__description {
    & p {
      font-size: $font16 !important; //To use Important Form default AEM Control css overrides
      line-height: 1.5rem !important;
      color: $gray !important;
      @include font-family-lato;
      padding-bottom: 6rem;
    }
  }
}
.has-error-fields {
  input {
    border-bottom: 1px solid $error-red !important;
  }
}
.teaser-form {
  .cmp-teaser__description {
    & > p {
      font-size: $font16;
      line-height: 1.5rem;
      color: $gray;
      @include font-family-lato;
      padding-bottom: 4rem;
    }
  }
  .cmp-teaser__content {
    padding: 0 1.45rem;
    text-align: center;
    h2 {
      font-size: 2.5rem;
      line-height: calculateRem(52px);
    }
  }
}

.cws-form .has-error-fields textarea ~label {
  transform: translateY(10px) scale(.8);
}

#justification + label {
  padding-left: calculateRem(10px);
}

